# AppsCloud.me

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  PriceUpdater.spec  README.md  build_installer.bat  build_installer.sh  build_linux.sh  build_macos.sh  build_windows.bat  config.json  config.json.example  demo.py  docker-compose.yml  excel_parser.py  logger_setup.py  main.html  main.py  price_database.py  pyproject.toml  report_generator.py  requirements.txt  run_project.bat  run_project.sh  setup_and_run.sh  telegram_channel.py  telegram_parser.py  web_server.py
Price Excel/: Все товары.xlsx
Project/: qwen-code-export-2026-04-15T13-23-38-645Z.md  qwen-code-export-2026-04-15T13-25-09-589Z.json  web_server.py
Project/price-updater/: CHAT_HISTORY.md  CONTRIBUTING.md  PROJECT_CONTEXT.md  price_storage.py  prices.db  prices.json  report_generator.py  requirements.txt  user_bot_client.py  web_server.py
Project/price-updater/build_scripts/: build_macos.py
Project/price-updater/tests/: conftest.py  test_reports.py
build_scripts/: build_debian.sh  build_windows.spec
deb_package/DEBIAN/: control  postinst
dist_release/: README.txt
templates/: index.html
tests/: test_database.py  test_parser.py  test_web.py
